@@ -1,3 +1,3 @@
 /* { dg-do compile } */
 
-var i = 1 ? "foo" : [1,2,3]; /* { dg-error "\n.*exactly the same type" } */
+var i = 1 ? "foo" : [1,2,3]; /* { dg-error "wrong type\n.*string" } */
