@@ -1,3 +1,3 @@
 /* { dg-do compile } */
 
-var i = 1 ? 10 : 20U; /* { dg-error "\n.*exactly the same type" } */
+var i = 1 ? 10 : 20U; /* { dg-error "wrong type\n.*int<32>" } */
